# biglake-iceberg-pipeline

./: .gitignore  DEMO.md  README.md  deploy.sh  pipeline.env.example  setup.sh
services/data-cleaning-agent/: main.py  pyproject.toml
services/loader/: Dockerfile  bigquery_manager.py  cleanup.py  config.py  iceberg_manager.py  main.py  requirements.txt
services/loader/src/: dataplex_notify.py  main.py
services/logger/: Dockerfile  config.py  main.py
services/logger/src/: config.py  main.py
specs/: data_agent_changes.md
terraform/: biglake.tf  bigquery.tf  bigquery_tables.tf  cloud_run_agent.tf  cloud_run_loader.tf  cloud_run_logger.tf  dataplex.tf  eventarc.tf  firestore.tf  gcs.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
test_data/thelook_ecommerce/: generate.py  requirements.txt  seed.py
test_data/thelook_ecommerce/ddl/: distribution_centers.sql  events.sql  inventory_items.sql  order_items.sql  orders.sql  products.sql  users.sql
test_data/thelook_ecommerce/silver/ddl/: distribution_centers.sql  events.sql  inventory_items.sql  order_items.sql  orders.sql  products.sql  users.sql
test_data/thelook_ecommerce/silver/spark_procedures/: distribution_centers.sql  events.sql  inventory_items.sql  order_items.sql  orders.sql  products.sql  users.sql
test_data/thelook_ecommerce/silver/transformations/: distribution_centers.sql  events.sql  inventory_items.sql  order_items.sql  orders.sql  products.sql  users.sql
test_sql/: basic_query.sql
